fix: prevent portfolio images from having distorted dimentions

--- a/src/components/molecules/navbar/styles.module.css
+++ b/src/components/molecules/navbar/styles.module.css
@@ -34,6 +34,10 @@
 
   &Inner {
     padding-bottom: 0 !important;
+
+    @media (--md-viewport) {
+      height: auto;
+    }
   }
 
   &Brand {
