--- a/src/components/molecules/portfolio-item/styles.module.css
+++ b/src/components/molecules/portfolio-item/styles.module.css
@@ -14,6 +14,7 @@
 
       @media (--sm-viewport) {
         max-width: 320px;
+        max-height: 180px;
       }
     }
   }
