--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -229,6 +229,7 @@
   &FormWrapper {
     @media (--sm-viewport) {
       max-width: 100vh;
+      margin: auto;
     }
   }
 
